[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.26.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0.158"
serde_json = "1.0.94"
rand = "0.8.5"
open = "4.0.1"